fixed unit tests